refactor: start extracting components from views when possible
