# src/main/java/me/ldclrcq/filature/sources/connectors/free/FreeSourceResource.java
@@ -1,4 +1,4 @@
-package me.ldclrcq.filature.sources.enercoop;
+package me.ldclrcq.filature.sources.connectors.free;
 
 import io.quarkus.logging.Log;
 import io.quarkus.oidc.UserInfo;
@@ -10,25 +10,25 @@ import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.UriInfo;
-import me.ldclrcq.filature.sources.SourceType;
 import me.ldclrcq.filature.sources.Source;
+import me.ldclrcq.filature.sources.SourceType;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponseSchema;
 import org.eclipse.microprofile.openapi.annotations.tags.Tag;
 
-@Path("/api/sources/enercoop")
+@Path("/api/sources/free")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
 @Tag(name = "Sources", description = "Manage synchronization sources")
-public class EnercoopSourceResource {
+public class FreeSourceResource {
 
     @Inject
     UserInfo userInfo;
 
     @POST
     @Transactional
-    public Response createEnercoopSource(@Valid EnercoopSourceCreationRequest request, @Context UriInfo uriInfo) {
-        Log.infof("Creating Enercoop source for user %s", this.userInfo.getSubject());
-        Source source = request.toSourceConfiguration(this.userInfo.getSubject());
+    public Response createFreeSource(@Valid FreeSourceCreationRequest request, @Context UriInfo uriInfo) {
+        Log.infof("Creating Free source for user %s", this.userInfo.getSubject());
+        Source source = request.toSource(this.userInfo.getSubject());
         source.persist();
         return Response
                 .status(Response.Status.CREATED)
@@ -39,11 +39,11 @@ public class EnercoopSourceResource {
     @GET
     @Path("/{id}")
     @Transactional
-    @APIResponseSchema(EnercoopSourceSummary.class)
-    public Response getEnercoopSource(@PathParam("id") Long id) {
+    @APIResponseSchema(FreeSourceSummary.class)
+    public Response getFreeSource(@PathParam("id") Long id) {
         return Source
-                .findByIdUserAndSource(id, userInfo.getSubject(), SourceType.ENERCOOP)
-                .map(EnercoopSourceSummary::fromSource)
+                .findByIdUserAndSource(id, userInfo.getSubject(), SourceType.FREE)
+                .map(FreeSourceSummary::fromSource)
                 .map(summary -> Response.ok(summary).build())
                 .orElse(Response.status(Response.Status.NOT_FOUND).build());
     }
@@ -51,12 +51,13 @@ public class EnercoopSourceResource {
     @PUT
     @Path("/{id}")
     @Transactional
-    public Response updateEnercoopSource(@PathParam("id") Long id, @Valid EnercoopSourceUpdateRequest request) {
-        Log.infof("Updating Enercoop source %d", id);
+    public Response updateFreeSource(@PathParam("id") Long id, @Valid FreeSourceUpdateRequest request) {
+        Log.infof("Updating Free source %d", id);
         return Source
-                .findByIdUserAndSource(id, userInfo.getSubject(), SourceType.ENERCOOP)
+                .findByIdUserAndSource(id, userInfo.getSubject(), SourceType.FREE)
                 .map(source -> {
-                    request.updateSource(source).persist();
+                    request.updateSource(source);
+                    source.persist();
                     return Response.ok().build();
                 })
                 .orElse(Response.status(Response.Status.NOT_FOUND).build());
@@ -66,9 +67,9 @@ public class EnercoopSourceResource {
     @Path("/{id}")
     @Transactional
     public Response deleteSource(@PathParam("id") Long id) {
-        Log.infof("Deleting Enercoop source %d ", id);
+        Log.infof("Deleting Free source %d", id);
         return Source
-                .findByIdUserAndSource(id, userInfo.getSubject(), SourceType.ENERCOOP)
+                .findByIdUserAndSource(id, userInfo.getSubject(), SourceType.FREE)
                 .map(source -> {
                     source.delete();
                     return Response.noContent().build();
