# src/main/webui/src/api/model/index.ts
@@ -10,6 +10,9 @@ export * from "./connectionSummary";
 export * from "./enercoopSourceCreationRequest";
 export * from "./enercoopSourceSummary";
 export * from "./enercoopSourceUpdateRequest";
+export * from "./freeSourceCreationRequest";
+export * from "./freeSourceSummary";
+export * from "./freeSourceUpdateRequest";
 export * from "./localDateTime";
 export * from "./nextcloudTargetCreationRequest";
 export * from "./nextcloudTargetSummary";
